доделал маску при наведении на карточки товаров

--- a/catalog.html
+++ b/catalog.html
@@ -163,7 +163,7 @@
             </a>
             <p class="item-cover">
               <a class="button" href="#"><span class="button-text">В корзину</span></a>
-              <a href="#">Добавить к сравнению</a>
+              <a class="item-compare" href="#">Добавить к сравнению</a>
             </p>
             <a href="#"><h3>Любительская селфи-палка</h3></a>
             <p class="product-price">500 руб.</p>
@@ -177,6 +177,10 @@
 
               <img src="img/item-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
             </a>
+            <p class="item-cover">
+              <a class="button" href="#"><span class="button-text">В корзину</span></a>
+              <a class="item-compare" href="#">Добавить к сравнению</a>
+            </p>
             <a href="#"><h3>Профессиональная селфи-палка</h3></a>
             <p class="product-price">1 500 руб.</p>
             <p class="item-new visually-hidden">
@@ -188,6 +192,10 @@
 
               <img src="img/item-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
             </a>
+            <p class="item-cover">
+              <a class="button" href="#"><span class="button-text">В корзину</span></a>
+              <a class="item-compare" href="#">Добавить к сравнению</a>
+            </p>
             <a href="#"><h3>Непотопляемая селфи-палка</h3></a>
             <p class="product-price">2 500 руб.</p>
             <p class="item-new visually-hidden">
@@ -199,6 +207,10 @@
 
               <img src="img/item-4.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
             </a>
+            <p class="item-cover">
+              <a class="button" href="#"><span class="button-text">В корзину</span></a>
+              <a class="item-compare" href="#">Добавить к сравнению</a>
+            </p>
             <a href="#"><h3>Селфи-палка «Следуй за мной»</h3></a>
             <p class="product-price">4 900 руб.</p>
             <p class="item-new">
