начал стилизацию пагинации

--- a/catalog.html
+++ b/catalog.html
@@ -93,7 +93,7 @@
               <div class="range-toggle range-toggle-max"></div>
             </fieldset>
             <fieldset class="filter-option">
-              <legend >Цвет</legend>
+              <legend>Цвет</legend>
               <ul>
                 <li>
 
@@ -228,15 +228,18 @@
               </p>
             </li>
           </ul>
+          <ul class="pagination-list">
+            <li class="pagination-item backwards"><a href="#">Назад</a></li>
+            <div class="pagination-wrapper">
+              <li class="pagination-item pagination-current"><a href="#">1</a></li>
+              <li class="pagination-item"><a href="#">2</a></li>
+              <li class="pagination-item"><a href="#">3</a></li>
+            </div>
+            <li class="pagination-item forwards"><a href="#">Вперед</a></li>
+          </ul>
         </section>
       </div>
-      <!-- <ul class="pagination-list">
-      <li class="pagination-item pagination-current"><a href="#">1</a></li>
-      <li class="pagination-item"><a href="#">2</a></li>
-      <li class="pagination-item"><a href="#">3</a></li>
-      <li class="pagination-item"><a href="#">Назад</a></li>
-      <li class="pagination-item "><a href="#">Вперёд</a></li>
-    </ul> -->
+      </ul>
       <div class="right-column">
         <div></div>
       </div>
@@ -280,70 +283,6 @@
       </div>
     </div>
   </footer>
-  <!--  <footer class="main-footer">
-    <div class="container">
-      <div class="footer-top">
-        <a class="footer-logo"><img src="img/footer-logo.svg" width="163" height="35"
-            alt="Логотип интернет-магазина Device"></a>
-        <ul class="user-footer-navigation">
-          <li class="user-name"><a href="#">Валентин Петухов</a></li>
-          <li class="logout-link"><a href="#">Выйти</a></li>
-          <li><a href="#">Сравнить</a></li>
-          <li><a href="#">Корзина</a></li>
-        </ul>
-      </div>
-      <div class="footer-navigation footer-middle">
-        <ul class="site-footer-navigation">
-          <li><a href="#">Доставка</a></li>
-          <li><a href="#">Гарантия</a></li>
-          <li><a href="#">Контакты</a></li>
-        </ul>
-        <p class="footer-contacts adress">г. Москва, ул. строителей, 15</p>
-        <p class="footer-contacts phone">Тел.: +7 (495) 495-95-95</p>
-      </div>
-      <div class="footer-bottom">
-        <p class="rectangle"></p>
-        <ul class="footer-social">
-          <li><a class="social-button" href="#">Фейсбук</a></li>
-          <li><a class="social-button" href="#">Инстаграм</a></li>
-          <li><a class="social-button" href="#">Твиттер</a></li>
-        </ul>
-        <p class="footer-copyright">
-          <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo-html.svg" width="27" height="35"
-              alt="Логотоп компании HTML Academy"></a>
-        </p>
-      </div>
-    </div>
-  </footer> -->
-  <!-- <footer class="main-footer">
-    <p class="footer-contacts">
-      <a><img src="img/footer-logo.svg" width="163" height="35" alt="Логотип интернет-магазина Device"></a>
-      <span>г. Москва, ул. строителей, 15</span>
-      <span>Тел.: +7 (495) 495-95-95</span>
-    </p>
-    <div class="footer-navigation">
-      <ul class="site-footer-navigation">
-        <li><a href="#">Доставка</a></li>
-        <li><a href="#">Гарантия</a></li>
-        <li><a href="#">Контакты</a></li>
-      </ul>
-      <ul class="user-footer-navigation">
-        <li class="logout-link"><button>Выйти</button></li>
-        <li class="user-name"><a href="#">Валентин Петухов</a></li>
-        <li><a href="#">Сравнить</a></li>
-        <li><a href="#">Корзина</a></li>
-      </ul>
-    </div>
-    <ul class="footer-social">
-      <li><a class="social-button" href="#">Фейсбук</a></li>
-      <li><a class="social-button" href="#">Инстаграм</a></li>
-      <li><a class="social-button" href="#">Твиттер</a></li>
-    </ul>
-    <p class="footer-copyright">
-      <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo-html.svg" width="27" height="35"
-          alt="Логотоп компании HTML Academy"></a>
-    </p>
-  </footer> -->
 </body>
 
 </html>
