закончил стилизацию пагинации

--- a/catalog.html
+++ b/catalog.html
@@ -229,13 +229,13 @@
             </li>
           </ul>
           <ul class="pagination-list">
-            <li class="pagination-item backwards"><a href="#">Назад</a></li>
+            <li class="pagination-item prev"><a href="#">Назад</a></li>
             <div class="pagination-wrapper">
               <li class="pagination-item pagination-current"><a href="#">1</a></li>
               <li class="pagination-item"><a href="#">2</a></li>
               <li class="pagination-item"><a href="#">3</a></li>
             </div>
-            <li class="pagination-item forwards"><a href="#">Вперед</a></li>
+            <li class="pagination-item next"><a href="#">Вперед</a></li>
           </ul>
         </section>
       </div>
