--- a/catalog.html
+++ b/catalog.html
@@ -34,7 +34,7 @@
       <ul class="site-navigation">
         <li>
           <a class="site-navigation-catalog" href="catalog.html">Каталог товаров</a>
-          <div class="catalog-menu visually-hidden">
+          <div class="catalog-menu">
             <ul>
               <li><a href="#">Виртуальная реальность</a></li>
               <li><a href="#">Моноподы для селфи</a></li>
@@ -68,181 +68,172 @@
         <li class="breadcrumbs-current">Моноподы для селфи</li>
       </ul>
     </div>
-    <div class="catalog-columns-wrapper">
-      <div class="left-column">
-        <div></div>
-      </div>
-      <div class="central-column container">
-
-        <section class="filters">
-
-          <h2>Фильтр:</h2>
-          <form class="filter" action="https://echo.htmlacademy.ru" method="get">
-            <fieldset class="filter-range">
-              <legend>Стоимость</legend>
-              <div class="range-controls">
-                <div class="scale">
-                  <div class="bar"></div>
-                </div>
+    <div class="central-column container">
+      <section class="filters">
+        <h2>Фильтр:</h2>
+        <form class="filter" action="https://echo.htmlacademy.ru" method="get">
+          <fieldset class="filter-range">
+            <legend>Стоимость</legend>
+            <div class="range-controls">
+              <div class="scale">
+                <div class="bar"></div>
               </div>
-              <div class="price-controls">
-                <label>от <input type="text" name="min-price" value="0"></label>
-                <label>до <input type="text" name="max-price" value="5000"></label>
-              </div>
-              <div class="range-toggle range-toggle-min"></div>
-              <div class="range-toggle range-toggle-max"></div>
-            </fieldset>
-            <fieldset class="filter-option">
-              <legend>Цвет</legend>
-              <ul>
-                <li>
+            </div>
+            <div class="price-controls">
+              <label>от <input type="text" name="min-price" value="0"></label>
+              <label>до <input type="text" name="max-price" value="5000"></label>
+            </div>
+            <div class="range-toggle range-toggle-min"></div>
+            <div class="range-toggle range-toggle-max"></div>
+          </fieldset>
+          <fieldset class="filter-option">
+            <legend>Цвет</legend>
+            <ul>
+              <li>
 
-                  <input class="visually-hidden input-checkbox" type="checkbox" name="black" id="filter-black" checked>
-                  <label for="filter-black">Черный</label>
-                </li>
-                <li>
+                <input class="visually-hidden input-checkbox" type="checkbox" name="black" id="filter-black" checked>
+                <label for="filter-black">Черный</label>
+              </li>
+              <li>
 
-                  <input class="visually-hidden input-checkbox" type="checkbox" name="white" id="filter-white">
-                  <label for="filter-white">Белый</label>
-                </li>
-                <li>
+                <input class="visually-hidden input-checkbox" type="checkbox" name="white" id="filter-white">
+                <label for="filter-white">Белый</label>
+              </li>
+              <li>
 
-                  <input class="visually-hidden input-checkbox" type="checkbox" name="blue" id="filter-blue" checked>
-                  <label for="filter-blue">Синий</label>
-                </li>
-                <li>
+                <input class="visually-hidden input-checkbox" type="checkbox" name="blue" id="filter-blue" checked>
+                <label for="filter-blue">Синий</label>
+              </li>
+              <li>
 
-                  <input class="visually-hidden input-checkbox" type="checkbox" name="red" id="filter-red" checked>
-                  <label for="filter-red">Красный</label>
-                </li>
-                <li>
+                <input class="visually-hidden input-checkbox" type="checkbox" name="red" id="filter-red" checked>
+                <label for="filter-red">Красный</label>
+              </li>
+              <li>
 
-                  <input class="visually-hidden input-checkbox" type="checkbox" name="pink" id="filter-pink" disabled>
-                  <label for="filter-pink">Розовый</label>
-                </li>
-              </ul>
-            </fieldset>
-            <fieldset class="filter-option bluetooth">
-              <legend>Bluetooth</legend>
-              <ul>
-                <li>
-                  <input class="visually-hidden radio-checkbox" type="radio" name="bluetooth-availability"
-                    value="available" id="filter-available" checked>
-                  <label for="filter-available">Есть</label>
-                </li>
-                <li>
-                  <input class="visually-hidden radio-checkbox" type="radio" name="bluetooth-availability"
-                    value="not-available" id="filter-not-available" disabled>
-                  <label for="filter-not-available">Нет</label>
-                </li>
-              </ul>
-            </fieldset>
-            <button class="button" type="submit"><span class="button-text">Показать</span></button>
-          </form>
-        </section>
-
-        <section class="catalog">
-          <section class="sort">
-            <h2>Сортировка:</h2>
-            <ul class="sort-type-list">
-              <li><a class="sort-type-current" href="#">По цене</a></li>
-              <li><a href="#">По типу</a></li>
-              <li><a href="#">По популярности</a></li>
-            </ul>
-            <ul class="sort-range-list">
-              <li><a class="ascending " href="#"><span class="visually-hidden">По возрастанию</span></a></li>
-              <li><a class="descending sort-range-current" href="#"><span class="visually-hidden">По убыванию</span></a>
+                <input class="visually-hidden input-checkbox" type="checkbox" name="pink" id="filter-pink" disabled>
+                <label for="filter-pink">Розовый</label>
               </li>
             </ul>
-          </section>
-          <h2 class="visually-hidden">Каталог товаров</h2>
-          <ul class="products">
-            <li class="products-item">
-              <a class="item-photo" href="#">
+          </fieldset>
+          <fieldset class="filter-option bluetooth">
+            <legend>Bluetooth</legend>
+            <ul>
+              <li>
+                <input class="visually-hidden radio-checkbox" type="radio" name="bluetooth-availability"
+                  value="available" id="filter-available" checked>
+                <label for="filter-available">Есть</label>
+              </li>
+              <li>
+                <input class="visually-hidden radio-checkbox" type="radio" name="bluetooth-availability"
+                  value="not-available" id="filter-not-available" disabled>
+                <label for="filter-not-available">Нет</label>
+              </li>
+            </ul>
+          </fieldset>
+          <button class="button" type="submit"><span class="button-text">Показать</span></button>
+        </form>
+      </section>
 
-                <img src="img/item-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
-
-              </a>
-              <p class="item-cover">
-                <a class="button" href="#"><span class="button-text">В корзину</span></a>
-                <a class="item-compare" href="#">Добавить к сравнению</a>
-              </p>
-              <a href="#">
-                <h3>Любительская селфи-палка</h3>
-              </a>
-              <p class="product-price">500 руб.</p>
-              <p class="item-new visually-hidden">
-                <span>NEW</span>
-              </p>
-
-            </li>
-            <li class="products-item">
-              <a class="item-photo" href="#">
-
-                <img src="img/item-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
-              </a>
-              <p class="item-cover">
-                <a class="button" href="#"><span class="button-text">В корзину</span></a>
-                <a class="item-compare" href="#">Добавить к сравнению</a>
-              </p>
-              <a href="#">
-                <h3>Профессиональная селфи-палка</h3>
-              </a>
-              <p class="product-price">1 500 руб.</p>
-              <p class="item-new visually-hidden">
-                <span>NEW</span>
-              </p>
-            </li>
-            <li class="products-item">
-              <a class="item-photo" href="#">
-
-                <img src="img/item-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
-              </a>
-              <p class="item-cover">
-                <a class="button" href="#"><span class="button-text">В корзину</span></a>
-                <a class="item-compare" href="#">Добавить к сравнению</a>
-              </p>
-              <a href="#">
-                <h3>Непотопляемая селфи-палка</h3>
-              </a>
-              <p class="product-price">2 500 руб.</p>
-              <p class="item-new visually-hidden">
-                <span>NEW</span>
-              </p>
-            </li>
-            <li class="products-item">
-              <a class="item-photo" href="#">
-
-                <img src="img/item-4.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
-              </a>
-              <p class="item-cover">
-                <a class="button" href="#"><span class="button-text">В корзину</span></a>
-                <a class="item-compare" href="#">Добавить к сравнению</a>
-              </p>
-              <a href="#">
-                <h3>Селфи-палка «Следуй за мной»</h3>
-              </a>
-              <p class="product-price">4 900 руб.</p>
-              <p class="item-new">
-                <span>NEW</span>
-              </p>
-            </li>
+      <section class="catalog">
+        <section class="sort">
+          <h2>Сортировка:</h2>
+          <ul class="sort-type-list">
+            <li><a class="sort-type-current" href="#">По цене</a></li>
+            <li><a href="#">По типу</a></li>
+            <li><a href="#">По популярности</a></li>
           </ul>
-          <ul class="pagination-list">
-            <li class="pagination-item prev"><a href="#">Назад</a></li>
-            <div class="pagination-wrapper">
-              <li class="pagination-item pagination-current"><a href="#">1</a></li>
-              <li class="pagination-item"><a href="#">2</a></li>
-              <li class="pagination-item"><a href="#">3</a></li>
-            </div>
-            <li class="pagination-item next"><a href="#">Вперед</a></li>
+          <ul class="sort-range-list">
+            <li><a class="ascending " href="#"><span class="visually-hidden">По возрастанию</span></a></li>
+            <li><a class="descending sort-range-current" href="#"><span class="visually-hidden">По убыванию</span></a>
+            </li>
           </ul>
         </section>
-      </div>
-      </ul>
-      <div class="right-column">
-        <div></div>
-      </div>
+        <h2 class="visually-hidden">Каталог товаров</h2>
+        <ul class="products">
+          <li class="products-item">
+            <a class="item-photo" href="#">
+
+              <img src="img/item-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
+
+            </a>
+            <p class="item-cover">
+              <a class="button" href="#"><span class="button-text">В корзину</span></a>
+              <a class="item-compare" href="#">Добавить к сравнению</a>
+            </p>
+            <a href="#">
+              <h3>Любительская селфи-палка</h3>
+            </a>
+            <p class="product-price">500 руб.</p>
+            <p class="item-new visually-hidden">
+              <span>NEW</span>
+            </p>
+
+          </li>
+          <li class="products-item">
+            <a class="item-photo" href="#">
+
+              <img src="img/item-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
+            </a>
+            <p class="item-cover">
+              <a class="button" href="#"><span class="button-text">В корзину</span></a>
+              <a class="item-compare" href="#">Добавить к сравнению</a>
+            </p>
+            <a href="#">
+              <h3>Профессиональная селфи-палка</h3>
+            </a>
+            <p class="product-price">1 500 руб.</p>
+            <p class="item-new visually-hidden">
+              <span>NEW</span>
+            </p>
+          </li>
+          <li class="products-item">
+            <a class="item-photo" href="#">
+
+              <img src="img/item-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
+            </a>
+            <p class="item-cover">
+              <a class="button" href="#"><span class="button-text">В корзину</span></a>
+              <a class="item-compare" href="#">Добавить к сравнению</a>
+            </p>
+            <a href="#">
+              <h3>Непотопляемая селфи-палка</h3>
+            </a>
+            <p class="product-price">2 500 руб.</p>
+            <p class="item-new visually-hidden">
+              <span>NEW</span>
+            </p>
+          </li>
+          <li class="products-item">
+            <a class="item-photo" href="#">
+
+              <img src="img/item-4.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
+            </a>
+            <p class="item-cover">
+              <a class="button" href="#"><span class="button-text">В корзину</span></a>
+              <a class="item-compare" href="#">Добавить к сравнению</a>
+            </p>
+            <a href="#">
+              <h3>Селфи-палка «Следуй за мной»</h3>
+            </a>
+            <p class="product-price">4 900 руб.</p>
+            <p class="item-new">
+              <span>NEW</span>
+            </p>
+          </li>
+        </ul>
+        <ul class="pagination-list">
+          <li class="pagination-item prev"><a href="#">Назад</a></li>
+          <div class="pagination-wrapper">
+            <li class="pagination-item pagination-current"><a href="#">1</a></li>
+            <li class="pagination-item"><a href="#">2</a></li>
+            <li class="pagination-item"><a href="#">3</a></li>
+          </div>
+          <li class="pagination-item next"><a href="#">Вперед</a></li>
+        </ul>
+      </section>
+    </div>
+    </ul>
     </div>
   </main>
   <footer class="main-footer">
