--- a/catalog.html
+++ b/catalog.html
@@ -20,16 +20,17 @@
           <input class="search-field" type="text" name="search" placeholder="Поиск по сайту">
           <button class="search-button" type="submit"><span>Найти</span></button>
         </form>
-        <ul class="user-navigation">
-          <div class="user-info-wrapper">
+        <section class="user-navigation">
+          <h2 class="visually-hidden">Навигация пользователя</h2>
+          <ul class="user-info-wrapper">
             <li class="user-info"><a class="login-link" href="login.html">Валентин Петухов</a></li>
             <li class="logout"><a class="logout-link" href="#">Выйти</a></li>
-          </div>
-          <div class="user-navigation-wrapper">
+          </ul>
+          <ul class="user-navigation-wrapper">
             <li><a class="compare" href="#">Сравнить</a></li>
             <li><a class="cart" href="#">Корзина</a></li>
-          </div>
-        </ul>
+          </ul>
+        </section>
       </div>
       <ul class="site-navigation">
         <li>
@@ -49,13 +50,15 @@
             </ul>
           </div>
         </li>
-        <div class="site-navigation-wrapper">
-          <div class="site-navigation-column">
+        <li class="site-navigation-wrapper">
+          <ul class="site-navigation-column">
             <li class="site-navigation-delivery"><a href="#">Доставка</a></li>
             <li class="site-navigation-warranty"><a href="#">Гарантия</a></li>
-          </div>
-          <li class="site-navigation-contacts"><a href="#">Контакты</a></li>
-        </div>
+          </ul>
+          <ul class="site-navigation-contacts">
+          <li><a href="#">Контакты</a></li>
+        </ul>
+        </li>
       </ul>
     </nav>
   </header>
@@ -136,6 +139,7 @@
       </section>
 
       <section class="catalog">
+          <h2 class="visually-hidden">Каталог товаров</h2>
         <section class="sort">
           <h2>Сортировка:</h2>
           <ul class="sort-type-list">
@@ -149,7 +153,6 @@
             </li>
           </ul>
         </section>
-        <h2 class="visually-hidden">Каталог товаров</h2>
         <ul class="products">
           <li class="products-item">
             <a class="item-photo" href="#">
@@ -180,7 +183,7 @@
               <a class="item-compare" href="#">Добавить к сравнению</a>
             </p>
             <a href="#">
-              <h3>Профессиональная селфи-палка</h3>
+              <h3>Профессиональная<br>селфи-палка</h3>
             </a>
             <p class="product-price">1 500 руб.</p>
             <p class="item-new visually-hidden">
@@ -224,16 +227,16 @@
         </ul>
         <ul class="pagination-list">
           <li class="pagination-item prev"><a href="#">Назад</a></li>
-          <div class="pagination-wrapper">
+          <li>
+            <ul  class="pagination-wrapper">
             <li class="pagination-item pagination-current"><a href="#">1</a></li>
             <li class="pagination-item"><a href="#">2</a></li>
             <li class="pagination-item"><a href="#">3</a></li>
-          </div>
+          </ul>
+          </li>
           <li class="pagination-item next"><a href="#">Вперед</a></li>
         </ul>
       </section>
-    </div>
-    </ul>
     </div>
   </main>
   <footer class="main-footer">
@@ -242,14 +245,18 @@
         <a class="footer-logo"><img src="img/footer-logo.svg" width="163" height="35"
             alt="Логотип интернет-магазина Device"></a>
         <ul class="user-footer-navigation">
-          <div class="footer-info-wrapper">
+          <li>
+            <ul  class="footer-info-wrapper">
             <li><a class="footer-login" href="#">Валентин Петухов</a></li>
             <li class="logout"><a class="logout-link" href="#">Выйти</a></li>
-          </div>
-          <div class="footer-navigation-wrapper">
+          </ul>
+          </li>
+          <li>
+            <ul  class="footer-navigation-wrapper">
             <li><a class="footer-compare" href="#">Сравнить</a></li>
             <li><a class="footer-cart" href="#  ">Корзина</a></li>
-          </div>
+          </ul>
+          </li>
         </ul>
       </div>
       <div class="footer-navigation footer-middle">
