внес финальные изменения

--- a/index.html
+++ b/index.html
@@ -193,10 +193,14 @@
     <section class="companies container">
       <h2 class="visually-hidden">На нашем сайте представлена продукция популярных брендов:</h2>
       <ul class="companies-list">
-        <li><a class="companies-list-item--1" href="#"><img src="img/logo-1.jpg" width="260" height="100" alt="Dji"></a></li>
-        <li><a class="companies-list-item--2" href="#"><img src="img/logo-2.jpg" width="260" height="100" alt="Sp Gadgets"></a></li>
-        <li><a class="companies-list-item--3" href="#"><img src="img/logo-3.jpg" width="260" height="100" alt="Go Pro"></a></li>
-        <li><a class="companies-list-item--4" href="#"><img src="img/logo-4.jpg" width="260" height="100" alt="Vive"></a></li>
+        <li><a class="companies-list-item--1" href="#"><img src="img/logo-1.jpg" width="260" height="100" alt="Dji"></a>
+        </li>
+        <li><a class="companies-list-item--2" href="#"><img src="img/logo-2.jpg" width="260" height="100"
+              alt="Sp Gadgets"></a></li>
+        <li><a class="companies-list-item--3" href="#"><img src="img/logo-3.jpg" width="260" height="100"
+              alt="Go Pro"></a></li>
+        <li><a class="companies-list-item--4" href="#"><img src="img/logo-4.jpg" width="260" height="100"
+              alt="Vive"></a></li>
       </ul>
     </section>
     <div class="info-columns container">
@@ -243,7 +247,7 @@
             </ul>
           </li>
           <li>
-            <ul  class="footer-navigation-wrapper">
+            <ul class="footer-navigation-wrapper">
               <li><a class="footer-compare" href="#">Сравнить</a></li>
               <li><a class="footer-cart" href="#  ">Корзина</a></li>
             </ul>
