убрал все <br> в разметке промо-слайдов

--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
       <ol class="slider-list">
         <li class="slider-item">
           <section class="slider-wrapper">
-            <h3 class="slider-title">Делай селфи,<br>как Бен Стиллер!</h3>
+            <h3 class="slider-title">Делай селфи, как Бен Стиллер!</h3>
             <p>
-              Самая длинная палка для селфи доступна в нашем магазине.<br>Восемь (Восемь, Карл!) метров длиной и весом
+              Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом
               всего 5 килограмм.
             </p>
             <a class="button slider-button" href="#"><span>Подробнее</span></a>
@@ -101,9 +101,9 @@
         </li>
         <li class="slider-item">
           <section class="slider-wrapper">
-            <h3 class="slider-title">Худеем<br>правильно!</h3>
+            <h3 class="slider-title">Худеем правильно!</h3>
             <p>
-              Мотивирующие фитнес-браслеты помогут найти в себе силы<br>не пропускать занятия и соблюдать диету.
+              Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.
             </p>
             <a class="button slider-button" href="#"><span>Подробнее</span></a>
             <table class="advantages">
@@ -118,9 +118,9 @@
         </li>
         <li class="slider-item">
           <section class="slider-wrapper">
-            <h3 class="slider-title">Порхает как бабочка,<br>жалит как пчела!</h3>
+            <h3 class="slider-title">Порхает как бабочка, жалит как пчела!</h3>
             <p>
-              Этот обычный, на первый взгляд, квадрокоптер оснащен<br>мощным лазером, замаскированным под стандартную
+              Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную
               камеру.
             </p>
             <a class="button slider-button" href="#"><span>Подробнее</span></a>
