--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <li class="slider-item">
           <section class="slider-wrapper">
             <h3 class="slider-title">Делай селфи, как Бен Стиллер!</h3>
-            <p>
+            <p class="slider-content">
               Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом
               всего 5 килограмм.
             </p>
@@ -102,7 +102,7 @@
         <li class="slider-item">
           <section class="slider-wrapper">
             <h3 class="slider-title">Худеем правильно!</h3>
-            <p>
+            <p class="slider-content">
               Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.
             </p>
             <a class="button slider-button" href="#"><span>Подробнее</span></a>
@@ -119,7 +119,7 @@
         <li class="slider-item">
           <section class="slider-wrapper">
             <h3 class="slider-title">Порхает как бабочка, жалит как пчела!</h3>
-            <p>
+            <p  class="slider-content">
               Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную
               камеру.
             </p>
