--- a/index.html
+++ b/index.html
@@ -166,22 +166,22 @@
       <ul class="services-list">
         <li class="services-item">
           <h3>Доставка</h3>
-          <p>
+          <p class="services-content">
             Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно!
             Ведь мы неплохо заработаем, поднимая его на ваш этаж.
           </p>
         </li>
         <li class="services-item">
           <h3>Гарантия</h3>
-          <p>
+          <p  class="services-content">
             Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам
             новый.<br>Товар, не дом, конечно же.
           </p>
         </li>
         <li class="services-item">
           <h3>Кредит</h3>
-          <p>
-            Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные<br>условия
+          <p  class="services-content">
+            Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия
             кредита.
             Выгодные для нашего банка, разумеется.
           </p>
