--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       <h2 class="visually-hidden">Популярные товары:</h2>
       <ul class="popular-list">
         <li class="popular-item popular-item--1"><a class="popular-link" href="#">Виртуальная реальность</a></li>
-        <li class="popular-item popular-item--2"><a class="popular-link" href="#">Моноподы<br>для селфи</a></li>
+        <li class="popular-item popular-item--2"><a class="popular-link" href="#">Моноподы для&nbspселфи</a></li>
         <li class="popular-item popular-item--3"><a class="popular-link" href="#">Экшн-камеры</a></li>
         <li class="popular-item popular-item--4"><a class="popular-link" href="#">Фитнес-браслеты</a></li>
         <li class="popular-item popular-item--5"><a class="popular-link" href="#">Умные часы</a></li>
