Убрал <br> в блоке "сервисы"

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
           <h3>Гарантия</h3>
           <p  class="services-content">
             Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам
-            новый.<br>Товар, не дом, конечно же.
+            новый. Товар,&nbspне&nbspдом, конечно же.
           </p>
         </li>
         <li class="services-item">
