--- a/catalog.html
+++ b/catalog.html
@@ -12,7 +12,7 @@
 <body class="catalog-page">
   <header class="main-header container">
     <nav class="main-navigation">
-      <a class="main-header-logo">
+      <a class="main-header-logo" href="index.html">
         <img src="img/logo.svg" width="163" height="35" alt="Логотип интернет-магазина Device">
       </a>
       <div class="main-navigation-wrapper">
@@ -242,7 +242,7 @@
   <footer class="main-footer">
     <div class="container">
       <div class="footer-top">
-        <a class="footer-logo"><img src="img/footer-logo.svg" width="163" height="35"
+        <a class="footer-logo" href="index.html"><img src="img/footer-logo.svg" width="163" height="35"
             alt="Логотип интернет-магазина Device"></a>
         <ul class="user-footer-navigation">
           <li>
