реализовал метку "NEW" через псевдокласс

--- a/catalog.html
+++ b/catalog.html
@@ -168,14 +168,9 @@
               <h3>Любительская селфи-палка</h3>
             </a>
             <p class="product-price">500 руб.</p>
-            <p class="item-new visually-hidden">
-              <span>NEW</span>
-            </p>
-
           </li>
           <li class="products-item">
             <a class="item-photo" href="#">
-
               <img src="img/item-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
             </a>
             <p class="item-cover">
@@ -186,13 +181,9 @@
               <h3>Профессиональная<br>селфи-палка</h3>
             </a>
             <p class="product-price">1 500 руб.</p>
-            <p class="item-new visually-hidden">
-              <span>NEW</span>
-            </p>
           </li>
           <li class="products-item">
             <a class="item-photo" href="#">
-
               <img src="img/item-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
             </a>
             <p class="item-cover">
@@ -203,13 +194,9 @@
               <h3>Непотопляемая селфи-палка</h3>
             </a>
             <p class="product-price">2 500 руб.</p>
-            <p class="item-new visually-hidden">
-              <span>NEW</span>
-            </p>
           </li>
-          <li class="products-item">
+          <li class="products-item product-new">
             <a class="item-photo" href="#">
-
               <img src="img/item-4.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
             </a>
             <p class="item-cover">
@@ -220,9 +207,6 @@
               <h3>Селфи-палка «Следуй за мной»</h3>
             </a>
             <p class="product-price">4 900 руб.</p>
-            <p class="item-new">
-              <span>NEW</span>
-            </p>
           </li>
         </ul>
         <ul class="pagination-list">
